--- a/style/components/_who.scss
+++ b/style/components/_who.scss
@@ -27,9 +27,9 @@
         }
     }
     img {
-        width: 60px;
-        height: 60px;
-        margin: 0 10px;
+        width: 50px;
+        height: 50px;
+        margin-bottom: -10px;
     }
     h2 {
         font-size: 2.8rem;
