--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -1,55 +1,53 @@
-header {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+body > header {
     box-sizing: border-box;
-    padding: 1rem;
-    button {
-        color: $white;
-        padding: .3rem .4rem;
-        border-radius: .5rem;
-        font-size: 1.3rem;
-        background-color: $grey;
-        cursor: pointer;
-        border: solid 2px $grey;
-        transition: background-color .4s ease,color .4s ease;
-        &:hover {
-            background-color: $white;
-            color: $grey;
-        }
-    }
-}
-@include phone {
-    header {
-        justify-content: flex-end;
-    }
-}
-nav {
+    width: 100%;
+    padding: 20px 0;
     display: flex;
-    ul {
-        display: flex;
-        flex-wrap: wrap;
-        li {
-            display: flex;
-            align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    h2 {
+        margin: 0 20px;
+        font-size: 1.4rem;
+        background-color: white;
+        padding: 4px 8px;
+        border-radius: 4px;
+        font-weight: 500;
+        span {
+            color: $red;
         }
     }
-    a {
-        font-size: 1.4rem;
-        margin: .75rem 1rem;
-        color: $black;
-        text-decoration: none;
-        &::after {
-            content: "";
-            display: block;
-            width: 0%;
-            height: 2px;
-            background-color: $black;
-            transition: width .2s ease;
+    nav {
+        align-self: center;
+        ul {
+            margin: 1em 0;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
         }
-        &:hover::after { width: 100%; }
+        li {
+            margin: 5px 20px;
+        }
+        a {
+            font-size: 1.4rem;
+            padding: 4px 8px;
+            border-radius: 4px;
+            transition: color .2s ease, background-color .2s ease;
+            &:hover {
+                background-color: $black;
+                color: white;
+            }
+            &.active {
+                background-color: $black;
+                color: white;     
+            }
+        }
+        @media (max-width: 768px) {
+            li {
+                margin: 15px 5px;
+            }
+            ul {
+                margin: 20px 0;
+            }
+        }
     }
 }
