--- a/views/editor.html
+++ b/views/editor.html
@@ -30,6 +30,7 @@
                     <input type="file" accept="image/*" id="image-input"/>
                     import image
                 </label>
+                <button onclick="rotate_image()">rotate</button>
                 <button onclick="upload_image()">upload</button>
                 <button onclick="clear_image()">clear</button>
                 <button onclick="add_image()">close</button>
