--- a/style/style.css
+++ b/style/style.css
@@ -750,7 +750,7 @@ footer {
       -ms-flex-direction: column;
           flex-direction: column;
   position: absolute;
-  bottom: 30vh;
+  bottom: 20vh;
   left: 15vw;
   width: 70vw;
   height: auto;
@@ -778,6 +778,8 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 #editor > div:nth-child(3) #manage-image-container #manage-image div {
@@ -826,7 +828,7 @@ footer {
   background-color: #89A1DC;
 }
 
-#editor > div:nth-child(3) #image-container button:nth-of-type(2), #editor > div:nth-child(3) #image-container button:nth-of-type(3) {
+#editor > div:nth-child(3) #image-container button:nth-of-type(3), #editor > div:nth-child(3) #image-container button:nth-of-type(4) {
   background-color: #D66161;
 }
 
@@ -865,6 +867,18 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+#editor > div:nth-of-type(4) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #editor #title, #editor #banner, #editor #password, #editor #tags, #editor #image-name {
